UI : Fixed alignment of hexes with red borders in card effects (digital)      Added basic hand sort buttons      Fixed wrong width/height of corps in pile view      Blue cards witha ctive effects are not in a pile anymore (digital)

--- a/src/css/Map.scss
+++ b/src/css/Map.scss
@@ -1058,4 +1058,8 @@
     margin-right: 4px;
     margin-bottom: 4px;
   }
+  .corp {
+    width: var(--card-height);
+    height: var(--card-width);
+  }
 }
